# Spolszczenie-do-c-

./: .gitignore  CMakeLists.txt  README.md  example1.cpp  main.cpp  spolszczenie.h
lib/: CMakeLists.txt
lib/src/: spolszczenie.cpp  spolszczenie.h
